--- a/ui/templates/ui/navigation.html
+++ b/ui/templates/ui/navigation.html
@@ -52,7 +52,7 @@
 
         <ul class="navbar-nav justify-content-end">
             <li class="nav-item">{% if user.is_authenticated %}
-        <span class="navbar-text">Hello, {{ user.first_name}} {{ user.last_name}} ({{ user.username }}).</span>
+                <span class="navbar-text" title="{{ user.id }}">Hello, {{ user.first_name}} {{ user.last_name}} ({{ user.username }}).</span>
         {% endif %}</li>
             {% if user.is_staff %}
             <li class="nav-item"><a class="nav-link" href="/admin"><i class="fas fa-wrench"></i> Admin</a></li>
